# csm.rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml
.devcontainer/: devcontainer.json
csm-cli/: Cargo.toml  benchmark.rs  main.rs
csm-core/: Cargo.toml  csm_full_impl.rs  csm_quantized_impl.rs  lib.rs  model.rs
csm-server/: Cargo.toml  main.rs
scripts/: match-models.py  quantize.py  requirements.txt  show-gguf.py  show-safetensors.py  test-api.py
src/: csm_quantized_impl.rs  main.rs  model.rs
