[package]
name = "csm-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "benchmark"
path = "benchmark.rs"

[dependencies]
csm-core = { path = "../csm-core" }
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
futures-util = "0.3.30"
log = "0.4.22"
env_logger = "0.11.3"
moshi = { version = "0.6.3" }
hf-hub = "0.4.3"
tokenizers = "0.21.4"
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "moshi/cuda"]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "moshi/cuda"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "moshi/metal"]