[package]
name = "csm-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "csm_rs"
path = "lib.rs"

[dependencies]
moshi = { version = "0.6.3" }
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
anyhow = "1.0.86"
tokenizers = "0.21.4"
hf-hub = "0.4.3"
tokio = { version = "1.38.0", features = ["full"] }
async-stream = "0.3.5"
futures-util = "0.3.30"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "moshi/cuda"]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn", "moshi/cuda"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "moshi/metal"]