[package]
name = "csm-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "main.rs"

[dependencies]
csm-core = { path = "../csm-core" }
candle-core = { version = "0.9.1" }
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio-stream = "0.1.15"
futures-util = "0.3.30"
http = "1.1.0"
bytes = "1.6.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors"] }
http-body-util = "0.1.3"
hyper = { version = "1.4.1" }
async-trait = "0.1.80"
axum = "0.8.4"
axum-extra = "0.10.1"

[features]
default = []
cuda = ["csm-core/cuda"]
cudnn = ["csm-core/cudnn"]
mkl = ["csm-core/mkl"]
accelerate = ["csm-core/accelerate"]
metal = ["csm-core/metal"]
